@@ -45,6 +45,15 @@ class CStringValidator extends CValidator
 	 * meaning that if the attribute is empty, it is considered valid.
 	 */
 	public $allowEmpty=true;
+	/**
+	 * @var string the encoding of the string value to be validated (e.g. 'UTF-8').
+	 * Setting this property requires you to enable mbstring PHP extension.
+	 * The value of this property will be used as the 2nd parameter of the mb_strlen() function.
+	 * Defaults to false, which means the strlen() function will be used for calculating the length
+	 * of the string.
+	 * @since 1.1.1
+	 */
+	public $encoding=false;
 
 	/**
 	 * Validates the attribute of the object.
@@ -57,7 +66,10 @@ class CStringValidator extends CValidator
 		$value=$object->$attribute;
 		if($this->allowEmpty && $this->isEmpty($value))
 			return;
-		$length=strlen($value);
+		if($this->encoding!==false && function_exists('mb_strlen'))
+			$length=mb_strlen($value,$this->encoding);
+		else
+			$length=strlen($value);
 		if($this->min!==null && $length<$this->min)
 		{
 			$message=$this->tooShort!==null?$this->tooShort:Yii::t('yii','{attribute} is too short (minimum is {min} characters).');
