@@ -25,6 +25,7 @@ Version 1.1.1 to be released
 - Bug: Fixed the bug that beforeAjaxUpdate/afterAjaxUpdate of CGridView/CListView do not take effect.
 - Bug: Fixed the bug that the names of URL parameters were not encoded (Qiang)
 - Enh #38: Added support to allow CHtml links and buttons work in AJAX responses (Qiang)
+- Enh #392: Added CStringValidator::encoding to support checking the length of multibyte strings (Qiang)
 - Enh #686: Added CUrlManager::setBasePath() (Qiang)
 - Enh #726: Added CDbExpression::params (Qiang)
 - Enh #794: Added support to allow using * to select all primary table columns in relational AR query (Qiang)
